--- a/bidang.html
+++ b/bidang.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kepengurusan BOMA UPI Cibiru 2024</title>
+
+    <!-- box icons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
 <body>
 
     <!-- header design -->
     <header class="header">
         <a href="#" class="logo">BOMA UPI Cibiru</a>
-
         <i class='bx bx-menu' id="menu-icon"></i>
-
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="tentang.html">Tentang</a>
@@ -19,19 +30,82 @@
         </nav>
     </header>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Kepengurusan BOMA UPI Cibiru 2024</title>
+    <!-- slider -->
+    <div class="slider">
+        <figure>
+            <div class="slide">
+                <img src="KOORDINATOR/badminton.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="KOORDINATOR/basket.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="KOORDINATOR/futsal.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="KOORDINATOR/volly.png" width="100%">
+            </div>
+        </figure>
+    </div>
 
-        <!-- box icons -->
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<div class="tumbul">
+    <a href="#">VOLLY</a>
+    <a href="#">FUTSAL</a><br>
+    <a href="#">BADMINTON</a>
+    <a href="#">BASKET</a>
+    <a href="#">TARUNG DERAJAT</a>
+</div>
 
-        <!-- custom css -->
-        <link rel="stylesheet" href="css/style.css">
-    </head>
+      <!-- isi -->
+<div class="volly" id="volly">
+    <h1 style="background-color:red;">BIDANG VOLLY</h1>
+    <h2>Teknik dasar bermain volly</h2>
 
+    <h3>1. Passing Atas</h3>
+    <p>
+        Teknik ini bisa dilakukan dengan sikap normal dan setinggi muka. 
+        Pada teknik passing atas setinggi muka bisa dilakukan bersamaan dengan sikap normal, 
+        guling ke samping, meloncat, hingga setengah guling ke belakang.
+    </p>
 
+    <h3>2. Passing Bawah</h3>
+    <p>
+        Passing bawah bisa dilakukan dengan satu tangan maupun dua tangan. 
+        Dengan kedua cara tersebut bisa digabungkan dengan sikap normal, guling ke 
+        samping, terjun ke depan, maupun setengah guling ke belakang.
+    </p>
+
+    <h3>3. Set Up</h3>
+    <p>
+        Set up atau mengumpan (memberikan bola pada teman) bisa dilakukan dengan beberapa teknik, 
+        yakni ke depan, ke belakang, dan ke samping (kanan atau kiri), Sementara itu, berdasarkan 
+        tinggi bola dari net bisa dilakukan secara normal, medium, dan low.Sedangkan, posisi set up 
+        berdasarkan arah bola dengan net bisa dilakukan dengan sejajar, vertikal, hingga diagonal.
+    </p>
+
+    <h3>4. Smash</h3>
+    <p>
+        Teknik ini juga dikenal dengan spike dan dibagi menjadi beberapa kelompok, yakni berdasarkan
+        gerakan bola ada silang dan lurus, berdasarkan pemberian set up ada open smash, semi smash, quick 
+        smash, push smash, dan pool straight smash.
+    </p>
+
+    <h3>5. Block</h3>
+    <p>
+        Block dilakukan untuk membendung serangan bola yang datang. Berdasarkan gerakan, 
+        blok dibagi menjadi aktif dan pasif. Sedangkan berdasarkan jumlah dikelompokkan menjadi
+         satu oran, dua orang, dan tiga orang.
+    </p>
+
+    <h3>6. Dasar Servis</h3>
+    <p>
+        Berdasarkan arah putaran bola, ada teknik top spin, back spin, inside spin,
+         outside spin, dan float. Kemudian, berdasarkan servis tangan bawah ada back spin,
+          outside spin, inside sin, cutting underhand, dan floating overhead.
+    </p>
+</div>
     <!-- custom js -->
     <script src="js/script.js"></script>
+</body>
+
+</html>
