--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="home-content">
             <h3>Selamat Datang</h3>
             <h1> di website</h1>
-            <h3><span> BOMA UPI CIBIRU</span></h3>
+            <H3><span> BOMA UPI CIBIRU</span></H3>
 
             <div class="social-media">
                 <a
