--- a/tentang.html
+++ b/tentang.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<body>
 
-    <!-- header design -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Kepengurusan BOMA UPI Cibiru 2024</title>
+
+    <!-- box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body> <!-- header design -->
     <header class="header">
         <a href="#" class="logo">BOMA UPI Cibiru</a>
 
@@ -19,43 +31,28 @@
         </nav>
     </header>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title> Kepengurusan BOMA UPI Cibiru 2024</title>
+    <!-- section design -->
+    <section class="about" id="about">
+        <br>
+        <div class="about-content">
+            <div style="justify-content: center;display: flex;">
 
-        <!-- box icons -->
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-        <!-- custom css -->
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-
-    <body>
-
-        <!-- section design -->
-        <section class="about" id="about">
-            <br>
-            <div class="about-content">
-                <div style="justify-content: center;display: flex;">
-
-                    <img src="Mentahan/logo.png" height="300">
-                </div>
-                <h1 class="heading">Tentang <span>BOMA</span></h1>
-                <p>Badan Olahraga Mahasiswa atau BOMA
-                    merupakan salah satu Unit Kegiatan Mahasiswa
-                    (UKM) di Universitas Pendidikan Indonesia (UPI)
-                    kampus daerah Cibiru. Boma dibentuk pada tanggal 02 Oktober 2014.
-                    Fungsi dari UKM Boma yaitu untuk mewadahi dan mengembangkan
-                    minat bakat mahasiswa.
-                    Boma terdiri dari 5 cabor yaitu Voli, Futsal, Basket, Badminton,
-                    dan Tarung derajat.</p>
+                <img src="Mentahan/logo.png" height="300">
             </div>
-        </section>
-        <!-- custom js -->
-        <script src="js/script.js"></script>
+            <h1 class="heading">Tentang <span>BOMA</span></h1>
+            <p>Badan Olahraga Mahasiswa atau BOMA
+                merupakan salah satu Unit Kegiatan Mahasiswa
+                (UKM) di Universitas Pendidikan Indonesia (UPI)
+                kampus daerah Cibiru. Boma dibentuk pada tanggal 02 Oktober 2014.
+                Fungsi dari UKM Boma yaitu untuk mewadahi dan mengembangkan
+                minat bakat mahasiswa.
+                Boma terdiri dari 5 cabor yaitu Voli, Futsal, Basket, Badminton,
+                dan Tarung derajat.</p>
+        </div>
+    </section>
+    <!-- custom js -->
+    <script src="js/script.js"></script>
 
-    </body>
+</body>
 
 </html>
