--- a/bidang.html
+++ b/bidang.html
@@ -50,7 +50,7 @@
 
       <!-- isi -->
 <div class="volly" id="volly">
-    <h1 style="background-color:red;">BIDANG VOLLY</h1>
+    <h1 style="background-color:red text-align: center;">BIDANG VOLLY</h1>
     <h2>Teknik dasar bermain volly</h2>
 
     <h3>1. Passing Atas</h3>
