--- a/pengurus.html
+++ b/pengurus.html
@@ -256,7 +256,7 @@
 
             <div class="box">
                 <img src="Pengurus/Novia.png" height="300">
-                <h2>Novia Aliesta Awaliyah</h2>
+                <h2>Novia Aliestiani Awaliyah</h2>
                 <p>DEPARTEMEN HUBUNGAN MASYARAKAT</p>
                 <div class="icon">
                     <a href="https://www.instagram.com/noviaalstni_/?utm_source=ig_web_button_share_sheet"><i
