--- a/pengurus.html
+++ b/pengurus.html
@@ -69,7 +69,7 @@
                     <a
                         href="https://www.instagram.com/kelaaazhr_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@grshaksidvf?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
 
             </div>
@@ -127,7 +127,7 @@
                     <a
                         href="https://www.instagram.com/aryadhikadanendra06?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@aryadhika_06?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -160,7 +160,7 @@
                     <a
                         href="https://www.instagram.com/mbilalma_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@mubimz_?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -216,14 +216,14 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/nafilafauziyah/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@nafilafzyh_?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
             <div class="box">
                 <img src="Pengurus/Nabyla frenata.png" height="300">
                 <h2> Nabyla Franata</h2>
-                <p>KOORDINATOR EPARTEMEN HUBUNGAN MASYARAKAT</p>
+                <p>KOORDINATOR DEPARTEMEN HUBUNGAN MASYARAKAT</p>
                 <div class="icon">
                     <a
                         href="https://www.instagram.com/nabillarnta_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i
@@ -283,7 +283,7 @@
                 <p>DEPARTEMEN MEDIA DAN INFORMASI</p>
                 <div class="icon">
                     <a href="tdk.html"><i class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@ungee00?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -397,7 +397,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/kyaaaiaa/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="https://www.tiktok.com/@lalala.key?_t=8nIwQiyo2OA&_r=1"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@grshaksidvf?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
