--- a/pengurus.html
+++ b/pengurus.html
@@ -34,7 +34,6 @@
     <!-- pengurus section design -->
     <section class="pengurus" id="pengurus">
         <h2 class="heading">Pengurus BOMA <span>2024</span></h2>
-        <h3>ANGGOTA KEPENGURUSAN BOMA UPI CIBIRU</h3>
 
         <div class="team-content">
 
@@ -246,7 +245,7 @@
 
             <div class="box">
                 <img src="Pengurus/Meysa Damayanti.png" height="300">
-                <h2>Meysa Damayanti H</h2>
+                <h2>Meysa Damayanthi H</h2>
                 <p>DEPARTEMEN HUBUNGAN MASYARAKAT</p>
                 <div class="icon">
                     <a href="tdk.html"><i class='bx bxl-instagram'></i></a>
