--- a/bidang.html
+++ b/bidang.html
@@ -51,7 +51,7 @@
       <!-- isi -->
 <div class="volly" id="volly">
     <h1 style="background-color:red; text-align: center;">BIDANG VOLLY</h1>
-    <h2>Teknik dasar bermain volly</h2>
+    <h2>Teknik dasar bermain bola volly</h2>
 
     <h3>1. Passing Atas</h3>
     <p>
@@ -95,7 +95,80 @@
          outside spin, dan float. Kemudian, berdasarkan servis tangan bawah ada back spin,
           outside spin, inside sin, cutting underhand, dan floating overhead.
     </p>
-</div>
+
+    <h2>Peraturan bermain bola volly</h2>
+    <p>
+       1. Permainan bola voli dilakukan oleh enam (6) pemain tiap tim dengan beberapa pemain cadangan. 
+    </p>
+    <p>
+        2. Tiap regu atau tim memiliki kesempatan tiga kali untuk memukul bola. Pada awal pertandingan, salah 
+        seorang pemain wajib melakukan serve ke area lawan yang dilakukan oleh seorang server.
+    </p> 
+    <p>3. Tim yang memenangkan rally berhak mendapat satu poin serta memiliki hak untuk melakukan servis. 
+        Saat rally telah selesai, pemainnya harus bertukar tempat dengan memutar searah jarum jam. 
+    </p>
+    <p>4. Anggota badan yang diperbolehkan untuk digunakan dalam bola voli adalah seluruh anggota tubuh mulai dari 
+        kepala, tangan, badan, dan kaki. Namun, yang paling dominan adalah tangan. 
+    </p>
+    <p>5. Jumlah pemain dalam satu 
+        regu adalah enam orang. Hanya tiga pemain yang bisa melakukan blocking di dekat net. Sedangkan pemain
+        lainnya bertugas memukul bola melewati net, dari belakang garis serang atau garis tiga meter
+        (garis yang memisahkan garis depan dengan belakang lapangan). 
+    </p>
+    <p>6. Pergantian pemain diperbolehkan selama pertandingan berlangsung. Umumnya komposisi pemain dalam permainan voli adalah seorang 
+        setter, dua blocker, dua receiver-hitter, serta seorang spiker. 
+    </p>
+    <p>7. Satu tim atau regu bisa mecetak satu poin di setiap rally, terlepas tim mana yang melakukan serve terlebih dahulu.
+    </p>
+    <p>8. Pertandingan permainan voli terdiri atas lima set. Empat set pertama menggunakan sistem 25 rally point. 
+        Sedangkan pertandingan terakhir menggunakan sistem 15 poin. 
+    </p>
+    <p>9. Adanya peran libero, yang tidak bisa 
+        melakukan serve, pergantian posisi, serta melakukan pukulan bola. Libero menggunakan seragam b
+        erwarna beda yang berdiri di bagian belakang lapangan. Libero bertugas untuk menjaga sistem 
+        pertahanan bagian belakang serta untuk memperpanjang sistem rally point.
+    </p>
+<h1 style="background-color:red; text-align: center;">BIDANG BADMINTON</h1>
+<h2>Teknik dasar bermain badminton</h2>
+
+<h3>1. Pukulan Forehand</h3>
+<p>
+    pukulan forehand adalah salah satu teknik dasar yang harus kamu kuasai. Pukulan ini 
+    dilakukan dengan memukul shuttlecock ketika berada di depan tubuhmu, dengan menggunakan 
+    raketmu sejajar terhadap target yang ingin kamu tuju. Teknik ini menjadi dasar dalam membangun
+     kekuatan dan kontrolmu dalam bermain badminton.
+</p>
+
+<h3>2.  Pukulan Backhand</h3>
+<p>
+Pukulan BackhandSeperti menyulap, pukulan backhand adalah teknik dasar yang akan menyempurnakan
+ kemampuanmu bermain badminton. Bedanya dengan pukulan forehand, pukulan backhand dilakukan dengan 
+ memukul shuttlecock ketika berada di belakang tubuhmu. Ingatlah untuk menjaga postur tubuhmu tetap
+  stabil dan berlatih secara konsisten agar pukulanmu semakin tajam.
+</p>
+
+<h3>3. Gerakan Footwork</h3>
+<p>
+    Salah satu hal yang sering diabaikan oleh pemain badminton pemula adalah gerakan kakinya atau footwork.
+     Namun, faktanya adalah gerakan tersebut memiliki peranan penting dalam meningkatkan permainanmu. 
+     Dengan mempelajari gerakan footwork yang benar, kamu dapat dengan mudah menghindari serangan lawan 
+     dan mendapatkan posisi yang tepat untuk melakukan pukulan balik yang mematikan.
+</p>
+
+<h3>4. Strategi Servis</h3>
+<p>
+    Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik. 
+    Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
+     untuk mengacaukan lawanmu dan meraih poin dengan mudah.
+</p>
+
+<h3>5. Strategi Servis</h3>
+<p>
+    Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik. 
+    Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
+     untuk mengacaukan lawanmu dan meraih poin dengan mudah.
+</p>
+
     <!-- custom js -->
     <script src="js/script.js"></script>
 </body>
