--- a/pengurus.html
+++ b/pengurus.html
@@ -355,7 +355,7 @@
             </div>
 
             <div class="box">
-                <img src="Pengurus/Unknown.png" height="300">
+                <img src="Pengurus/Achmad.png" height="300">
                 <h2>Achmad Rizky Fauzy</h2>
                 <p>KOORDINATOR FUTSAL</p>
                 <div class="icon">
