--- a/pengurus.html
+++ b/pengurus.html
@@ -153,7 +153,7 @@
 
             <div class="box">
                 <img src="Pengurus/Bilal.png" height="300">
-                <h2>Muhammad Bilal M A</h2>
+                <h2>M. Bilal Mardhiyyano A</h2>
                 <p>DEPARTEMEN PENGEMBANGAN</p>
                 <div class="icon">
                     <a
