--- a/pengurus.html
+++ b/pengurus.html
@@ -102,7 +102,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/amandaaasophiaa_/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-tiktok'></i></a>
+                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
                 </div>
 
             </div>
@@ -239,7 +239,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/dillalanf/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@dilla.landzz?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -249,7 +249,7 @@
                 <p>DEPARTEMEN HUBUNGAN MASYARAKAT</p>
                 <div class="icon">
                     <a href="tdk.html"><i class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@medsyasyak?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -260,7 +260,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/noviaalstni_/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@nvllstnn?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -271,8 +271,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/salma_lvi/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="https://www.tiktok.com/@salmaalvira44?is_from_webapp=1&sender_device=pc"><i
-                            class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@salmaalvira44?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
@@ -361,7 +360,7 @@
                 <div class="icon">
                     <a href="https://www.instagram.com/achmadrizky___/?utm_source=ig_web_button_share_sheet"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href="tdk.html"><i class='bx bxl-tiktok'></i></a>
+                    <a href="https://www.tiktok.com/@achmadrizky87?is_from_webapp=1&sender_device=pc"><i class='bx bxl-tiktok'></i></a>
                 </div>
             </div>
 
