--- a/tentang.html
+++ b/tentang.html
@@ -26,7 +26,7 @@
             <a href="tentang.html" class="active">Tentang</a>
             <a href="pengurus.html">Pengurus Boma 2024</a>
             <a href="bidang.html">Bidang Olahraga</a>
-            <a href="event.html">Event</a>
+            <a href="Berita.html">Berita & Informasi</a>
             <a href="https://shorturl.at/hrnKG">Media Partner</a>
         </nav>
     </header>
