--- a/bidang.html
+++ b/bidang.html
@@ -25,7 +25,7 @@
             <a href="tentang.html">Tentang</a>
             <a href="pengurus.html">Pengurus Boma 2024</a>
             <a href="bidang.html" class="active">Bidang Olahraga</a>
-            <a href="event.html">Event</a>
+            <a href="Berita.html">Berita & Informasi</a>
             <a href="https://shorturl.at/hrnKG">Media Partner</a>
         </nav>
     </header>
