--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="tentang.html">Tentang</a>
             <a href="pengurus.html">Pengurus Boma 2024</a>
             <a href="bidang.html">Bidang Olahraga</a>
-            <a href="event.html">Event</a>
+            <a href="Berita.html">Berita & Informasi</a>
             <a href="https://shorturl.at/hrnKG">Media Partner</a>
 
         </nav>
@@ -57,7 +57,7 @@
             <a href="tentang.html" class="btn">Tentang</a>
             <a href="pengurus.html" class="btn">Pengurus Boma 2024</a><br>
             <a href="bidang.html" class="btn">Bidang Olahraga</a>
-            <a href="event.html" class="btn">Event</a>
+            <a href="event.html" class="btn">Berita & Informasi</a>
         </div>
     </section>
     <!-- custom js -->
