--- a/pengurus.html
+++ b/pengurus.html
@@ -27,7 +27,7 @@
             <a href="tentang.html">Tentang</a>
             <a href="pengurus.html" class="active">Pengurus Boma 2024</a>
             <a href="bidang.html">Bidang Olahraga</a>
-            <a href="event.html">Event</a>
+            <a href="Berita.html">Berita & Informasi</a>
             <a href="https://shorturl.at/hrnKG">Media Partner</a>
         </nav>
     </header>
