--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="tentang.html" class="btn">Tentang</a>
             <a href="pengurus.html" class="btn">Pengurus Boma 2024</a><br>
             <a href="bidang.html" class="btn">Bidang Olahraga</a>
-            <a href="event.html" class="btn">Berita & Informasi</a>
+            <a href="Berita.html" class="btn">Berita & Informasi</a>
         </div>
     </section>
     <!-- custom js -->
