--- a/bidang.html
+++ b/bidang.html
@@ -51,6 +51,14 @@
       <!-- isi -->
 <div class="volly" id="volly">
     <h1 style="background-color:red; text-align: center;">BIDANG VOLLY</h1>
+
+        <div class="tampilan-volly">
+            <a href="https://www.instagram.com/futsal_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
+            "><img src="Mentahan/logo volly.jpeg" width="50px"></a> 
+            <h5 href="Berita.html">Pengurus Bidang</h5>
+            <h5 href="https://shorturl.at/hrnKG" >Dokumentasi</h5>
+        </div>
+
     <h2>Teknik dasar bermain bola volly</h2>
 
     <h3>1. Passing Atas</h3>
@@ -128,6 +136,33 @@
         erwarna beda yang berdiri di bagian belakang lapangan. Libero bertugas untuk menjaga sistem 
         pertahanan bagian belakang serta untuk memperpanjang sistem rally point.
     </p>
+
+    <!-- foto -->
+    <div class="slider-doc">
+        <h2>FOTO DOKUMENTASI</h2>
+        <figure>
+            <div class="slide-doc">
+                <img src="Dokumentasi/volly/1.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="Dokumentasi/volly/2.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="Dokumentasi/volly/3.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="Dokumentasi/volly/4.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="Dokumentasi/volly/5.png" width="100%">
+            </div>
+            <div class="slide">
+                <img src="Dokumentasi/volly/6.png" width="100%">
+            </div>
+        </figure>
+    </div>
+
+
 <h1 style="background-color:red; text-align: center;">BIDANG BADMINTON</h1>
 <h2>Teknik dasar bermain badminton</h2>
 
@@ -169,6 +204,8 @@ Pukulan BackhandSeperti menyulap, pukulan backhand adalah teknik dasar yang akan
      untuk mengacaukan lawanmu dan meraih poin dengan mudah.
 </p>
 
+
+     
     <!-- custom js -->
     <script src="js/script.js"></script>
 </body>
