--- a/bidang.html
+++ b/bidang.html
@@ -32,7 +32,7 @@
 
     <!-- slider -->
     <div class="slider">
-        <figure>
+        <figure class="fig">
             <div class="slide">
                 <img src="KOORDINATOR/badminton.png" width="100%">
             </div>
@@ -48,166 +48,223 @@
         </figure>
     </div>
 
-      <!-- isi -->
-<div class="volly" id="volly">
-    <h1 style="background-color:red; text-align: center;">BIDANG VOLLY</h1>
+    <!-- isi -->
+    <div class="volly" id="volly">
+        <h1 style="background-color:red; text-align: center;">BIDANG VOLLY</h1>
 
         <div class="tampilan-volly">
-            <a href="https://www.instagram.com/futsal_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
-            "><img src="Mentahan/logo volly.jpeg" width="50px"></a> 
-            <h5 href="Berita.html">Pengurus Bidang</h5>
-            <h5 href="https://shorturl.at/hrnKG" >Dokumentasi</h5>
+            <a href="https://www.instagram.com/voli_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
+            "><img src="Mentahan/logo volly.jpeg" width="50px"></a>
+            <h5 href="#">Pengurus Bidang</h5>
+            <h5><a href="#fotdom" style="color: white;">Dokumentasi</a></h5>
         </div>
 
-    <h2>Teknik dasar bermain bola volly</h2>
+        <h4>Teknik dasar bermain bola volly</h4>
 
-    <h3>1. Passing Atas</h3>
-    <p>
-        Teknik ini bisa dilakukan dengan sikap normal dan setinggi muka. 
-        Pada teknik passing atas setinggi muka bisa dilakukan bersamaan dengan sikap normal, 
-        guling ke samping, meloncat, hingga setengah guling ke belakang.
-    </p>
+        <h3>1. Passing Atas</h3>
+        <p>
+            Teknik ini bisa dilakukan dengan sikap normal dan setinggi muka.
+            Pada teknik passing atas setinggi muka bisa dilakukan bersamaan dengan sikap normal,
+            guling ke samping, meloncat, hingga setengah guling ke belakang.
+        </p>
 
-    <h3>2. Passing Bawah</h3>
-    <p>
-        Passing bawah bisa dilakukan dengan satu tangan maupun dua tangan. 
-        Dengan kedua cara tersebut bisa digabungkan dengan sikap normal, guling ke 
-        samping, terjun ke depan, maupun setengah guling ke belakang.
-    </p>
+        <h3>2. Passing Bawah</h3>
+        <p>
+            Passing bawah bisa dilakukan dengan satu tangan maupun dua tangan.
+            Dengan kedua cara tersebut bisa digabungkan dengan sikap normal, guling ke
+            samping, terjun ke depan, maupun setengah guling ke belakang.
+        </p>
 
-    <h3>3. Set Up</h3>
-    <p>
-        Set up atau mengumpan (memberikan bola pada teman) bisa dilakukan dengan beberapa teknik, 
-        yakni ke depan, ke belakang, dan ke samping (kanan atau kiri), Sementara itu, berdasarkan 
-        tinggi bola dari net bisa dilakukan secara normal, medium, dan low.Sedangkan, posisi set up 
-        berdasarkan arah bola dengan net bisa dilakukan dengan sejajar, vertikal, hingga diagonal.
-    </p>
+        <h3>3. Set Up</h3>
+        <p>
+            Set up atau mengumpan (memberikan bola pada teman) bisa dilakukan dengan beberapa teknik,
+            yakni ke depan, ke belakang, dan ke samping (kanan atau kiri), Sementara itu, berdasarkan
+            tinggi bola dari net bisa dilakukan secara normal, medium, dan low.Sedangkan, posisi set up
+            berdasarkan arah bola dengan net bisa dilakukan dengan sejajar, vertikal, hingga diagonal.
+        </p>
 
-    <h3>4. Smash</h3>
-    <p>
-        Teknik ini juga dikenal dengan spike dan dibagi menjadi beberapa kelompok, yakni berdasarkan
-        gerakan bola ada silang dan lurus, berdasarkan pemberian set up ada open smash, semi smash, quick 
-        smash, push smash, dan pool straight smash.
-    </p>
+        <h3>4. Smash</h3>
+        <p>
+            Teknik ini juga dikenal dengan spike dan dibagi menjadi beberapa kelompok, yakni berdasarkan
+            gerakan bola ada silang dan lurus, berdasarkan pemberian set up ada open smash, semi smash, quick
+            smash, push smash, dan pool straight smash.
+        </p>
 
-    <h3>5. Block</h3>
-    <p>
-        Block dilakukan untuk membendung serangan bola yang datang. Berdasarkan gerakan, 
-        blok dibagi menjadi aktif dan pasif. Sedangkan berdasarkan jumlah dikelompokkan menjadi
-         satu oran, dua orang, dan tiga orang.
-    </p>
+        <h3>5. Block</h3>
+        <p>
+            Block dilakukan untuk membendung serangan bola yang datang. Berdasarkan gerakan,
+            blok dibagi menjadi aktif dan pasif. Sedangkan berdasarkan jumlah dikelompokkan menjadi
+            satu oran, dua orang, dan tiga orang.
+        </p>
 
-    <h3>6. Dasar Servis</h3>
-    <p>
-        Berdasarkan arah putaran bola, ada teknik top spin, back spin, inside spin,
-         outside spin, dan float. Kemudian, berdasarkan servis tangan bawah ada back spin,
-          outside spin, inside sin, cutting underhand, dan floating overhead.
-    </p>
+        <h3>6. Dasar Servis</h3>
+        <p>
+            Berdasarkan arah putaran bola, ada teknik top spin, back spin, inside spin,
+            outside spin, dan float. Kemudian, berdasarkan servis tangan bawah ada back spin,
+            outside spin, inside sin, cutting underhand, dan floating overhead.
+        </p>
 
-    <h2>Peraturan bermain bola volly</h2>
-    <p>
-       1. Permainan bola voli dilakukan oleh enam (6) pemain tiap tim dengan beberapa pemain cadangan. 
-    </p>
-    <p>
-        2. Tiap regu atau tim memiliki kesempatan tiga kali untuk memukul bola. Pada awal pertandingan, salah 
-        seorang pemain wajib melakukan serve ke area lawan yang dilakukan oleh seorang server.
-    </p> 
-    <p>3. Tim yang memenangkan rally berhak mendapat satu poin serta memiliki hak untuk melakukan servis. 
-        Saat rally telah selesai, pemainnya harus bertukar tempat dengan memutar searah jarum jam. 
-    </p>
-    <p>4. Anggota badan yang diperbolehkan untuk digunakan dalam bola voli adalah seluruh anggota tubuh mulai dari 
-        kepala, tangan, badan, dan kaki. Namun, yang paling dominan adalah tangan. 
-    </p>
-    <p>5. Jumlah pemain dalam satu 
-        regu adalah enam orang. Hanya tiga pemain yang bisa melakukan blocking di dekat net. Sedangkan pemain
-        lainnya bertugas memukul bola melewati net, dari belakang garis serang atau garis tiga meter
-        (garis yang memisahkan garis depan dengan belakang lapangan). 
-    </p>
-    <p>6. Pergantian pemain diperbolehkan selama pertandingan berlangsung. Umumnya komposisi pemain dalam permainan voli adalah seorang 
-        setter, dua blocker, dua receiver-hitter, serta seorang spiker. 
-    </p>
-    <p>7. Satu tim atau regu bisa mecetak satu poin di setiap rally, terlepas tim mana yang melakukan serve terlebih dahulu.
-    </p>
-    <p>8. Pertandingan permainan voli terdiri atas lima set. Empat set pertama menggunakan sistem 25 rally point. 
-        Sedangkan pertandingan terakhir menggunakan sistem 15 poin. 
-    </p>
-    <p>9. Adanya peran libero, yang tidak bisa 
-        melakukan serve, pergantian posisi, serta melakukan pukulan bola. Libero menggunakan seragam b
-        erwarna beda yang berdiri di bagian belakang lapangan. Libero bertugas untuk menjaga sistem 
-        pertahanan bagian belakang serta untuk memperpanjang sistem rally point.
-    </p>
+        <h2>Peraturan bermain bola volly</h2>
+        <p>
+            1. Permainan bola voli dilakukan oleh enam (6) pemain tiap tim dengan beberapa pemain cadangan.
+        </p>
+        <p>
+            2. Tiap regu atau tim memiliki kesempatan tiga kali untuk memukul bola. Pada awal pertandingan, salah
+            seorang pemain wajib melakukan serve ke area lawan yang dilakukan oleh seorang server.
+        </p>
+        <p>3. Tim yang memenangkan rally berhak mendapat satu poin serta memiliki hak untuk melakukan servis.
+            Saat rally telah selesai, pemainnya harus bertukar tempat dengan memutar searah jarum jam.
+        </p>
+        <p>4. Anggota badan yang diperbolehkan untuk digunakan dalam bola voli adalah seluruh anggota tubuh mulai dari
+            kepala, tangan, badan, dan kaki. Namun, yang paling dominan adalah tangan.
+        </p>
+        <p>5. Jumlah pemain dalam satu
+            regu adalah enam orang. Hanya tiga pemain yang bisa melakukan blocking di dekat net. Sedangkan pemain
+            lainnya bertugas memukul bola melewati net, dari belakang garis serang atau garis tiga meter
+            (garis yang memisahkan garis depan dengan belakang lapangan).
+        </p>
+        <p>6. Pergantian pemain diperbolehkan selama pertandingan berlangsung. Umumnya komposisi pemain dalam permainan
+            voli adalah seorang
+            setter, dua blocker, dua receiver-hitter, serta seorang spiker.
+        </p>
+        <p>7. Satu tim atau regu bisa mecetak satu poin di setiap rally, terlepas tim mana yang melakukan serve terlebih
+            dahulu.
+        </p>
+        <p>8. Pertandingan permainan voli terdiri atas lima set. Empat set pertama menggunakan sistem 25 rally point.
+            Sedangkan pertandingan terakhir menggunakan sistem 15 poin.
+        </p>
+        <p>9. Adanya peran libero, yang tidak bisa
+            melakukan serve, pergantian posisi, serta melakukan pukulan bola. Libero menggunakan seragam b
+            erwarna beda yang berdiri di bagian belakang lapangan. Libero bertugas untuk menjaga sistem
+            pertahanan bagian belakang serta untuk memperpanjang sistem rally point.
+        </p>
+
+        <!-- foto -->
+        <div class="slider-doc">
+            <h2 id="fotdom">FOTO DOKUMENTASI</h2>
+            <figure>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/1.png" width="100%">
+                </div>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/2.png" width="100%">
+                </div>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/3.png" width="100%">
+                </div>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/4.png" width="100%">
+                </div>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/5.png" width="100%">
+                </div>
+                <div class="slide-doc">
+                    <img src="Dokumentasi/volly/6.png" width="100%">
+                </div>
+            </figure>
+        </div>
+
+        <div class="foto-kabid">
+            <h1 id="fotdom">FOTO KOORDINATOR</h1>
+            <div class="blok" style="display: flex; justify-content: space-evenly;">
+                <img src="KOORDINATOR/2.png" width="25%"></a>
+                <div>
+                    <h2>Jadwal Latihan</h2>
+                    <p>Selasa 16.00 - 18.00</p>
+                    <p>Kamis 16.00 - 18.00</p>
+                    <p>Sabtu 16.00 - 18.00</p>
+                </div>
+            </div>
+        </div>
+
+        <h1 style="background-color:red; text-align: center;">BIDANG BADMINTON</h1>
+        <div class="tampilan-volly">
+            <a href="https://www.instagram.com/badminton_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
+            "><img src="Mentahan/logo badminton.jpeg" width="50px"></a> 
+            <h5 href="#fotdomku">Pengurus Bidang</h5>
+            <h5><a href="#fotdomku" style="color: white;" >Dokumentasi</a></h5>
+        </div>
+        <h4>Teknik dasar bermain badminton</h4>
+
+        <h3>1. Pukulan Forehand</h3>
+        <p>
+            pukulan forehand adalah salah satu teknik dasar yang harus kamu kuasai. Pukulan ini
+            dilakukan dengan memukul shuttlecock ketika berada di depan tubuhmu, dengan menggunakan
+            raketmu sejajar terhadap target yang ingin kamu tuju. Teknik ini menjadi dasar dalam membangun
+            kekuatan dan kontrolmu dalam bermain badminton.
+        </p>
+
+        <h3>2. Pukulan Backhand</h3>
+        <p>
+            Pukulan BackhandSeperti menyulap, pukulan backhand adalah teknik dasar yang akan menyempurnakan
+            kemampuanmu bermain badminton. Bedanya dengan pukulan forehand, pukulan backhand dilakukan dengan
+            memukul shuttlecock ketika berada di belakang tubuhmu. Ingatlah untuk menjaga postur tubuhmu tetap
+            stabil dan berlatih secara konsisten agar pukulanmu semakin tajam.
+        </p>
+
+        <h3>3. Gerakan Footwork</h3>
+        <p>
+            Salah satu hal yang sering diabaikan oleh pemain badminton pemula adalah gerakan kakinya atau footwork.
+            Namun, faktanya adalah gerakan tersebut memiliki peranan penting dalam meningkatkan permainanmu.
+            Dengan mempelajari gerakan footwork yang benar, kamu dapat dengan mudah menghindari serangan lawan
+            dan mendapatkan posisi yang tepat untuk melakukan pukulan balik yang mematikan.
+        </p>
+
+        <h3>4. Strategi Servis</h3>
+        <p>
+            Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik.
+            Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
+            untuk mengacaukan lawanmu dan meraih poin dengan mudah.
+        </p>
+
+        <h3>5. Strategi Servis</h3>
+        <p>
+            Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik.
+            Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
+            untuk mengacaukan lawanmu dan meraih poin dengan mudah.
+        </p>
 
     <!-- foto -->
     <div class="slider-doc">
-        <h2>FOTO DOKUMENTASI</h2>
+        <h2 id="fotdomku">FOTO DOKUMENTASI</h2>
         <figure>
             <div class="slide-doc">
-                <img src="Dokumentasi/volly/1.png" width="100%">
+                <img src="Dokumentasi/badminton/1.png" width="100%">
             </div>
-            <div class="slide">
-                <img src="Dokumentasi/volly/2.png" width="100%">
+            <div class="slide-doc">
+                <img src="Dokumentasi/badminton/2.png" width="100%">
             </div>
-            <div class="slide">
-                <img src="Dokumentasi/volly/3.png" width="100%">
+            <div class="slide-doc">
+                <img src="Dokumentasi/badminton/3.png" width="100%">
             </div>
-            <div class="slide">
-                <img src="Dokumentasi/volly/4.png" width="100%">
+            <div class="slide-doc">
+                <img src="Dokumentasi/badminton/4.png" width="100%">
             </div>
-            <div class="slide">
-                <img src="Dokumentasi/volly/5.png" width="100%">
+            <div class="slide-doc">
+                <img src="Dokumentasi/badminton/5.png" width="100%">
             </div>
-            <div class="slide">
-                <img src="Dokumentasi/volly/6.png" width="100%">
+            <div class="slide-doc">
+                <img src="Dokumentasi/badminton/6.png" width="100%">
             </div>
         </figure>
     </div>
+<div class="foto-kabid">
+            <h1 id="fotdomku">FOTO KOORDINATOR</h1>
+            <div class="blok" style="display: flex; justify-content: space-evenly;">
+                <img src="KOORDINATOR/1.png" width="25%"></a>
+                <div>
+                    <h2>Jadwal Latihan</h2>
+                    <p>Selasa 16.00 - 18.00</p>
+                    <p>Kamis 16.00 - 18.00</p>
+                    <p>Sabtu 16.00 - 18.00</p>
+                </div>
+            </div>
+        </div>
 
+    </div>
 
-<h1 style="background-color:red; text-align: center;">BIDANG BADMINTON</h1>
-<h2>Teknik dasar bermain badminton</h2>
-
-<h3>1. Pukulan Forehand</h3>
-<p>
-    pukulan forehand adalah salah satu teknik dasar yang harus kamu kuasai. Pukulan ini 
-    dilakukan dengan memukul shuttlecock ketika berada di depan tubuhmu, dengan menggunakan 
-    raketmu sejajar terhadap target yang ingin kamu tuju. Teknik ini menjadi dasar dalam membangun
-     kekuatan dan kontrolmu dalam bermain badminton.
-</p>
-
-<h3>2.  Pukulan Backhand</h3>
-<p>
-Pukulan BackhandSeperti menyulap, pukulan backhand adalah teknik dasar yang akan menyempurnakan
- kemampuanmu bermain badminton. Bedanya dengan pukulan forehand, pukulan backhand dilakukan dengan 
- memukul shuttlecock ketika berada di belakang tubuhmu. Ingatlah untuk menjaga postur tubuhmu tetap
-  stabil dan berlatih secara konsisten agar pukulanmu semakin tajam.
-</p>
-
-<h3>3. Gerakan Footwork</h3>
-<p>
-    Salah satu hal yang sering diabaikan oleh pemain badminton pemula adalah gerakan kakinya atau footwork.
-     Namun, faktanya adalah gerakan tersebut memiliki peranan penting dalam meningkatkan permainanmu. 
-     Dengan mempelajari gerakan footwork yang benar, kamu dapat dengan mudah menghindari serangan lawan 
-     dan mendapatkan posisi yang tepat untuk melakukan pukulan balik yang mematikan.
-</p>
-
-<h3>4. Strategi Servis</h3>
-<p>
-    Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik. 
-    Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
-     untuk mengacaukan lawanmu dan meraih poin dengan mudah.
-</p>
-
-<h3>5. Strategi Servis</h3>
-<p>
-    Dalam badminton, servis adalah momen penting untuk mengawali permainan dengan baik. 
-    Pelajari variasi teknik servis, seperti servis pendek, servis panjang, atau servis drop,
-     untuk mengacaukan lawanmu dan meraih poin dengan mudah.
-</p>
-
-
-     
-    <!-- custom js -->
-    <script src="js/script.js"></script>
+        <!-- custom js -->
+        <script src="js/script.js"></script>
 </body>
 
 </html>
