--- a/bidang.html
+++ b/bidang.html
@@ -55,8 +55,21 @@
         <div class="tampilan-volly">
             <a href="https://www.instagram.com/voli_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
             "><img src="Mentahan/logo volly.jpeg" width="50px"></a>
-            <h5 href="#">Pengurus Bidang</h5>
             <h5><a href="#fotdom" style="color: white;">Dokumentasi</a></h5>
+        </div>
+
+          <!-- foto pengurus -->
+        <div class="foto-kabid">
+            <h1>FOTO KOORDINATOR</h1>
+            <div class="blok" style="display: flex; justify-content: space-evenly;">
+                <img src="KOORDINATOR/2.png" width="25%"></a>
+                <div>
+                    <h2>Jadwal Latihan</h2>
+                    <p>Selasa 16.00 - 18.00</p>
+                    <p>Kamis 16.00 - 18.00</p>
+                    <p>Sabtu 16.00 - 18.00</p>
+                </div>
+            </div>
         </div>
 
         <h4>Teknik dasar bermain bola volly</h4>
@@ -164,26 +177,28 @@
             </figure>
         </div>
 
-        <div class="foto-kabid">
-            <h1 id="fotdom">FOTO KOORDINATOR</h1>
-            <div class="blok" style="display: flex; justify-content: space-evenly;">
-                <img src="KOORDINATOR/2.png" width="25%"></a>
-                <div>
-                    <h2>Jadwal Latihan</h2>
-                    <p>Selasa 16.00 - 18.00</p>
-                    <p>Kamis 16.00 - 18.00</p>
-                    <p>Sabtu 16.00 - 18.00</p>
-                </div>
-            </div>
-        </div>
+ <!--------------------------------- GANTI BIDANG ---------------------------------------->
 
         <h1 style="background-color:red; text-align: center;">BIDANG BADMINTON</h1>
         <div class="tampilan-volly">
             <a href="https://www.instagram.com/badminton_upicibiru?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==
             "><img src="Mentahan/logo badminton.jpeg" width="50px"></a> 
-            <h5 href="#fotdomku">Pengurus Bidang</h5>
             <h5><a href="#fotdomku" style="color: white;" >Dokumentasi</a></h5>
         </div>
+
+        <!-- foto pengurus -->
+    <div class="foto-kabid">
+        <h1>FOTO KOORDINATOR</h1>
+        <div class="blok" style="display: flex; justify-content: space-evenly;">
+            <img src="KOORDINATOR/1.png" width="25%"></a>
+            <div>
+                <h2>Jadwal Latihan</h2>
+                <p>Selasa 16.00 - 18.00</p>
+                <p>Kamis 16.00 - 18.00</p>
+                <p>Sabtu 16.00 - 18.00</p>
+            </div>
+        </div>
+    </div>
         <h4>Teknik dasar bermain badminton</h4>
 
         <h3>1. Pukulan Forehand</h3>
@@ -248,18 +263,6 @@
             </div>
         </figure>
     </div>
-<div class="foto-kabid">
-            <h1 id="fotdomku">FOTO KOORDINATOR</h1>
-            <div class="blok" style="display: flex; justify-content: space-evenly;">
-                <img src="KOORDINATOR/1.png" width="25%"></a>
-                <div>
-                    <h2>Jadwal Latihan</h2>
-                    <p>Selasa 16.00 - 18.00</p>
-                    <p>Kamis 16.00 - 18.00</p>
-                    <p>Sabtu 16.00 - 18.00</p>
-                </div>
-            </div>
-        </div>
 
     </div>
 
