--- a/tentang.html
+++ b/tentang.html
@@ -50,6 +50,30 @@
                 dan Tarung derajat.</p>
         </div>
     </section>
+
+    <div class="vismis">
+        <h1 style="background-color:red; text-align: center;">VISI & MISI</h1>
+        <h2><span> Visi : </span></h2>
+                <p>Menjadikan organisasi yang SEHAT</p>
+
+               <h2><span> Misi: </span></h2>
+                <p><span>S</span> = Silaturahmi yang terjaga antara anggota, pengurus, demisioner. </p>
+                <p><span>E</span> = Efektifnya komunikasi antar anggota dan pengurus</p>
+                <p><span>H</span> = Harus sabar dan ikhlas melakukan segalanya</p>
+                <p><span>A</span> = Aktifnya anggota dan pengurus dalam kegiatan BOMA maupun pertandingan yang ada</p>
+                <p><span>T</span> = Terciptanya kesehatan mental yang baik</p>
+        
+    </div>
+
+    <div class="struktur-BOMA">
+
+        <div style="justify-content: center;display: flex;">
+
+            <img src="Mentahan/Struktur Organisasi Pengurus BOMA.png" height="500">
+        </div>
+
+    </div>
+
     <!-- custom js -->
     <script src="js/script.js"></script>
 
