--- a/tentang.html
+++ b/tentang.html
@@ -47,7 +47,8 @@
                 Fungsi dari UKM Boma yaitu untuk mewadahi dan mengembangkan
                 minat bakat mahasiswa.
                 Boma terdiri dari 5 cabor yaitu Voli, Futsal, Basket, Badminton,
-                dan Tarung derajat.</p>
+                dan Tarung derajat.
+            </p>
         </div>
     </section>
 
@@ -69,7 +70,7 @@
 
         <div style="justify-content: center;display: flex;">
 
-            <img src="Mentahan/Struktur Organisasi Pengurus BOMA.png" height="500">
+            <img src="Mentahan/Struktur Organisasi Pengurus BOMA.png" height="400">
         </div>
 
     </div>
