--- a/tentang.html
+++ b/tentang.html
@@ -37,7 +37,7 @@
         <div class="about-content">
             <div style="justify-content: center;display: flex;">
 
-                <img src="Mentahan/logo.png" height="300">
+                <img src="Mentahan/logo.png" width="100%">
             </div>
             <h1 class="heading">Tentang <span>BOMA</span></h1>
             <p>Badan Olahraga Mahasiswa atau BOMA
@@ -67,11 +67,10 @@
     </div>
 
     <div class="struktur-BOMA">
-
         <div style="justify-content: center;display: flex;">
-
-            <img src="Mentahan/Struktur Organisasi Pengurus BOMA.png" height="400">
+            <img src="Mentahan/Struktur Organisasi Pengurus BOMA.png" width="100%">
         </div>
+    </div>
 
     </div>
 
